# finbank-risk-lakehouse

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml
dashboards/: streamlit_app.py
databricks/notebooks/: bronze_to_silver.py  silver_to_gold.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: risk_classification.sql
dbt/models/marts/: mart_account_health.sql  mart_credit_macro_context.sql  mart_customer_exposure.sql  schema.yml
dbt/models/staging/: sources.yml  stg_macro_indicators.sql
dbt/snapshots/: customer_exposure_snapshot.sql
dbt/tests/: assert_account_health_reconciles_accounts.sql  assert_customer_exposure_non_negative.sql  assert_customer_exposure_reconciles_loans.sql  assert_daily_transactions_grain.sql  assert_daily_transactions_reconciles_source.sql  assert_macro_indicator_grain.sql  assert_portfolio_status_matches_dpd.sql  assert_single_current_customer_snapshot.sql  assert_suspicious_count_within_transaction_count.sql
docs/: ai_governance.md  architecture_mermaid.md  business_context.md  recruiter_brief.md  roadmap.md
docs/diagrams/: architecture-overview.mmd
docs/portfolio/: cv_entry.md  demo_script.md  linkedin_carousel.md  linkedin_post.md  manual_publication_checklist.md  pre_linkedin_test_plan.md  release_notes_v1.0.0.md  release_notes_v1.0.1.md
infra/aws/: README.md  main.tf  outputs.tf  variables.tf
orchestration/: README.md  __init__.py  dagster_defs.py  local_pipeline.py
orchestration/airflow/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
orchestration/airflow/dags/: finbank_local_pipeline.py
schemas/: accounts_schema.json  customers_schema.json  cvm_funds_schema.json  loans_schema.json  transactions_schema.json
scripts/: evidence_pack.py  smoke_dashboard.py
sql/: postgres_bootstrap.sql
src/ai_assistant/: app.py  governed_copilot.py  prompts.py  sql_guardrails.py
src/lakehouse/: local_layers.py
src/python_ingestion/: load_to_postgres.py
src/rust_validator/src/: main.rs
src/streaming/: consumer.py  producer.py
tests/: test_bcb_extractor.py  test_bootstrap_contract.py  test_compose_configuration.py  test_copilot_audit.py  test_cvm_extractor.py  test_evidence_pack.py  test_governed_copilot.py  test_lakehouse_layers.py  test_load_to_duckdb.py  test_load_to_postgres.py  test_orchestration_pipeline.py  test_orchestration_terraform.py  test_real_streaming.py  test_risk_agent_factory.py  test_sql_guardrails.py
