[project]
name = "finbank-risk-lakehouse"
version = "1.0.0"
description = "A recruiter-ready banking risk lakehouse and governed AI copilot portfolio project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.1",
    "faker==33.3.1",
    "requests==2.32.3",
    "chardet>=5.2,<6.0",
    "sqlalchemy==2.0.36",
    "sqlparse==0.5.5",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "pyarrow==18.1.0",
    "streamlit==1.41.1",
    "plotly==5.24.1",
    "dbt-core==1.8.9",
    "dbt-postgres==1.8.2",
    "qdrant-client==1.12.1",
    "openai==1.59.6",
    "google-genai>=1.0.0,<2.0.0",
    "tenacity==9.0.0",
    "pyyaml==6.0.2",
    "dagster==1.9.8",
    "dagster-webserver==1.9.8",
    "duckdb==1.1.3",
    "dbt-duckdb==1.8.3",
    "duckdb-engine>=0.13.0",
    "kafka-python-ng==2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.6",
    "sqlfluff==3.5.0",
    "sqlfluff-templater-dbt==3.5.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
sql_file_exts = ".sql"
max_line_length = 110

[tool.sqlfluff.templater.dbt]
project_dir = "dbt"
profiles_dir = "dbt"
