[project]
name = "finbank-risk-lakehouse"
version = "1.0.0"
description = "A recruiter-ready banking risk lakehouse and governed AI copilot portfolio project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.3",
    "numpy==2.5.1",
    "faker==40.32.0",
    "requests==2.34.2",
    "chardet>=5.2,<8.0",
    "sqlalchemy==2.0.51",
    "sqlparse==0.5.5",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "pyarrow==25.0.0",
    "streamlit==1.59.2",
    "plotly==6.9.0",
    "dbt-core==1.12.0",
    "dbt-postgres==1.11.0",
    "qdrant-client==1.18.0",
    "openai==2.46.0",
    "google-genai>=1.0.0,<3.0.0",
    "tenacity==9.1.4",
    "pyyaml==6.0.3",
    "dagster==1.13.14",
    "dagster-webserver==1.13.14",
    "duckdb==1.5.4",
    "dbt-duckdb==1.10.1",
    "duckdb-engine>=0.13.0",
    "kafka-python-ng==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
    "sqlfluff==4.2.2",
    "sqlfluff-templater-dbt==4.2.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
sql_file_exts = ".sql"
max_line_length = 110

[tool.sqlfluff.templater.dbt]
project_dir = "dbt"
profiles_dir = "dbt"
